--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "electron-packager": "^12.0.1",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
